# UltronGauntlet

./: .env  .gitignore  Cargo.toml  README.md  courses.csv  data.json  go.mod  main.db  main.go  samples.txt  text.txt
go/: samples.txt
go/crawler/: crawler.go  data.txt  go.mod  z.txt
go/crawler/new/: new.go
go/crawler/newish/: newish.go
go/new_crawler/: data.json  go.mod  go.sum  new_crawler.go
migrations/2022-06-06-021740_create_duration_units/: down.sql  up.sql
migrations/2022-06-06-185240_create_cnaef_areas/: up.sql
migrations/2022-06-06-221748_create_exams/: down.sql  up.sql
migrations/create_tables/: down.sql  up.sql
sql/: test.sql
src/: exams.rs  hey.rs  main.rs
src/characteristics/: cnaef_area.rs  contest.rs  degree.rs  duration.rs  institution.rs
src/lib/: exams.rs  mod.rs
src/lib/characteristics/: course.rs  duration.rs  ects.rs  education_type.rs  institution.rs  mod.rs
src/lib/db/: mod.rs  models.rs  schema.rs
src/lib/exams/: mod.rs  types.rs
src/lib/utils/: charset_middleware.rs  mod.rs  non_empty_vector.rs
src/utils/: non_empty_vector.rs
