[package]
name = "ultron_gauntlet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
voyager = { version = "0.2.1" }
tokio = { version = "1.18.2", features = ["full"] }
anyhow = "1.0.57"
futures = "0.3.21"
reqwest = "0.11.10"