[package]
name = "ultron_gauntlet"
version = "0.1.0"
edition = "2021"

[dependencies]
#voyager = { version = "0.2.1" }
voyager = { git = "https://github.com/Zizico2/voyager-middleware", rev = "5a712f0c2a2d15fcb8eb372bb32f1c7355256378" }
encoding_rs = "0.8.31"
tokio = { version = "1.18.2", features = ["full"] }
anyhow = "1.0.57"
futures = "0.3.21"
reqwest = "0.11.10"
reqwest-middleware = "0.1.6"
reqwest-retry = "0.1.5"
reqwest-tracing = "0.2.2"
async-trait = "0.1.53"
task-local-extensions = "0.1.1"
once_cell = "1.12.0"
const_format = "0.2.23"
