[package]
name = "ultron_gauntlet"
version = "0.1.0"
edition = "2021"

[dependencies]
#voyager = { version = "0.2.1" }
voyager = { git = "https://github.com/Zizico2/voyager-middleware", branch = "voyager-middleware" }
tokio = { version = "1.18.2", features = ["full"] }
anyhow = "1.0.57"
futures = "0.3.21"
reqwest = "0.11.10"
reqwest-middleware = "0.1.6"
reqwest-retry = "0.1.5"
reqwest-tracing = "0.2.2"
async-trait = "0.1.53"
task-local-extensions = "0.1.1"
once_cell = "1.12.0"
const_format = "0.2.23"
tracing-subscriber = "0.3.11"
tracing = "0.1.34"
ego-tree = "0.6.2"
thiserror = "1.0.24"
clap = { version = "3.1.18", features = ["derive"] }
serde = { version = "1.0.137", features = ["derive"] }
csv = "1.1.6"